styles/globals.css
.noise {
  position: absolute;
  opacity: 1;
  z-index: 0;
  mix-blend-mode: overlay;
  background-image: url("/img/noise.png");
  background-repeat: revert;
  height: 100vh;
  width: 100vw;
}

.container {
  margin: 0 auto;
  max-width: 1770px;
  padding: 0 25px;
}

.link-opacity {
  transition: opacity 0.2s ease-out;
}

.link-opacity:hover {
  opacity: 0.9;
}

.link-opacity:active,
.link-opacity:focus {
  opacity: 0.8;
}

.link-underline {
  text-decoration: none;
  transition: all 0.2s ease-out;
  outline: none;
  background-image: linear-gradient(90deg, #fff 0%, #fff 100%);
  background-position: left bottom;
  background-size: 0px 1px;
  background-repeat: no-repeat;
  padding-bottom: 4px;
  margin-bottom: -4px;
}

.link-underline:hover {
  background-size: 100% 1px;
}

.link-underline:active,
.link-underline:focus {
  background-size: 100% 1px;
}

.link-gradient {
  display: inline-block;
  font-family: "ppmi", sans-serif;
  font-weight: 800;
  font-size: 18px;
  color: inherit;
  text-decoration: none;
  padding: 28px 26px;
  box-sizing: border-box;
  position: relative;
  border-radius: 50px;
}

.link-gradient:before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 50px;
  box-sizing: border-box;
  padding: 2px;
  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
  -webkit-mask-composite: destination-out;
  mask-composite: exclude;
  -moz-border-image: -moz-linear-gradient(100deg, rgba(189, 0, 255, 0.4), #0500ff);
  background-image: linear-gradient(100deg, rgba(189, 0, 255, 0.4), #0500ff);
  border-image-slice: 1;
}

.link-gradient.without-gradient {
  border: 2px solid rgba(255, 255, 255, 0.2);
}

.link-gradient.without-gradient:before {
  content: none;
}

.link-gradient .overlay {
  line-height: 150%;
  display: inline-block;
  overflow: hidden;
  height: 27px;
  vertical-align: bottom;
  padding: 0 30px;
}

.link-gradient span {
  display: block;
  transition: 0.6s cubic-bezier(0, 0, 0.04, 0.99);
}

.link-gradient img {
  margin-left: 34px;
  margin-right: -27px;
  vertical-align: bottom;
}

.link-gradient:hover span:first-child {
  margin-top: -27px;
}

.logo {
  line-height: 0;
}

.header {
  width: 100%;
  position: absolute;
  top: 82px;
  left: 0;
}

.header-inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header-nav {
  display: flex;
}

.header-nav__link {
  color: #fff;
  text-decoration: none;
  font-family: "ppmi", sans-serif;
  font-weight: 800;
}

.header-nav__link+.header-nav__link {
  margin-left: 50px;
}

.hero {
  padding-top: 508px;
  margin-bottom: 30vh;
  min-height: 100vh;
}

.hero-title {
  font-family: "ppmi", sans-serif;
  font-size: 96px;
  line-height: 98px;
  font-weight: 800;
  margin: 0 0 48px;
  max-width: 840px;
}

.hero-description {
  margin: 0 0 80px;
  max-width: 1172px;
}

.section-title {
  margin: 0;
  font-family: "ppmi", sans-serif;
  font-size: 64px;
  line-height: 66px;
}

.section-body {
  font-family: "ppmi", sans-serif;
  font-size: 18px;
  line-height: 150%;
}

.section-block {
  background: #070612;
  border-radius: 15px;
  padding: 60px;
}

.section-h3 {
  font-family: "ppmi", sans-serif;
  font-size: 36px;
  line-height: 37px;
  font-weight: 800;
}

.example {
  margin-top: 387px;
}

.example-top {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
  margin-bottom: 62px;
}

.example-top__list {
  padding: 0;
  margin: 0;
  list-style: none;
}

.example-top__list li {
  display: inline-block;
  font-family: "ppmi", sans-serif;
  font-size: 18px;
  line-height: 150%;
}

.example-top__list li+li {
  margin-left: 43px;
}

.example-top__list li span {
  display: inline-block;
  background: linear-gradient(to left, #710099, #03009D);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.example-top__list li div {
  display: inline;
}

.example-top__title {
  margin: 0;
}

.example-block {
  margin-top: 80px;
  position: relative;
}

.example-block__content {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 50px;
}

.example-block__img {
  max-width: 775px;
  border-radius: 15px;
  width: 50%;
}

.example-block__list {
  padding: 0;
  margin: 0;
  list-style: none;
  max-width: 775px;
  flex: 1;
  width: calc(50% - 50px);
}

.example-block__list li {
  font-family: "ppmi", sans-serif;
  font-size: 18px;
  line-height: 150%;
  max-height: 27px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: rgba(255, 255, 255, 0.4);
}

.example-block__list li span {
  color: #fff;
}

.example-block__list li+li {
  margin-top: 26px;
}

.example-block__footer {
  display: flex;
  align-items: center;
  margin-top: 51px;
}

.example-block__description {
  margin: 0 10px 0 0;
  font-family: "ppmi", sans-serif;
  font-size: 18px;
  line-height: 150%;
  opacity: 0.4;
  max-width: 1330px;
  flex: 1 1;
}

.tariffs {
  margin-top: 300px;
}

.tariffs-description {
  margin: 65px 0;
  max-width: 835px;
}

.tariffs-cards {
  display: flex;
  justify-content: space-between;
  gap: 50px;
  z-index: 2;
  position: relative;
}

.tariffs-item {
  flex-grow: 1;
  width: 100%;
  border: 2px solid rgba(255, 255, 255, 0.1);
  border-radius: 15px;
  position: relative;
  padding: 60px;
}

.tariffs-item-popular {
  border: 0;
}
/* ... */

